--- a/ace-public/editor.css
+++ b/ace-public/editor.css
@@ -8,7 +8,6 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  
 }
 .file_tree input[type=radio], .file_tree input[type=checkbox] {
   width: 0;
@@ -46,7 +45,8 @@
   color: #a4d3ff;
 }
 .file_tree input[type=radio]:checked + label {
-  color: #5298fc;
+  color: #fffe17;
+  background-color:#576abd;
 }
 .file_tree input[type=checkbox]:checked + label + .dir_wrapper {
   display: block;
@@ -62,6 +62,16 @@
 .file_tree input[type=checkbox] + label:hover {
   background-position: top -18px left 6px;
 }
+
+    
+.file_tree label span.show_theme {
+    color:#666666;
+}
+
+.file_tree label.file_open span.show_theme {
+    color:#f7a115;
+}
+        
 
 body {
   margin: 0;
@@ -112,7 +122,12 @@ body {
          width: 100%;
          height: 100%;
      }
-
+     
+     #editor_resizing {
+         
+         font-family: Monaco;
+         font-size:20pt;
+     }
     
 }
 
@@ -122,7 +137,9 @@ body {
     
     .menu {
         position: absolute;
-        width: 260px;
+        width: 50vw;
+        max-height:90vh;
+        overflow:scroll;
         padding: 2px;
         margin: 0;
         border: 1px solid #bbb;
@@ -141,7 +158,7 @@ body {
         transition: transform 0.1s ease-out, opacity 0.1s ease-out;
         pointer-events: none;
     }
-    
+
     .menu-item {
         display: block;
         position: relative;
@@ -336,4 +353,97 @@ body {
     }
     
 
+}
+
+@media screen /* color picker*/ {
+    
+    .color-picker-container {
+      display: inline-block;
+      background: #fff none repeat scroll 0% 0%;
+      border-radius: 5px;
+      box-shadow: 2px 2px 15px 5px #00000020;
+    }
+    .color-picker-container .picker-container .canvas-container {
+      margin: 20px;
+      position: relative;
+      float: left;
+      width: 200px;
+      display: inline-block;
+      background: #fff;
+    }
+    .color-picker-container .picker-container .canvas-container.active {
+      display: block;
+    }
+    .color-picker-container .picker-container .canvas-container canvas {
+      border-radius: 5000px;
+      box-shadow: 0 0 0 0px #00000030;
+      background: #fff;
+    }
+    .color-picker-container .picker-container .canvas-container .pointer {
+      width: 15px;
+      height: 15px;
+      border-width: 5px 0 5px 10px;
+      border-radius: 50%;
+      position: absolute;
+      pointer-events: none;
+      background: white;
+    }
+    .color-picker-container .picker-container .canvas-container input {
+      margin-top: 10px;
+      width: 100%;
+      height: 30px;
+      border-radius: 5000px;
+      box-shadow: 0 0 3px 3px #00000010;
+      text-align: center;
+      font-weight: bold;
+      font-family: Montserrat;
+      background: #fff;
+      border: 0;
+      color: #353738;
+    }
+    .color-picker-container .picker-container .slider-container {
+      width: 15px;
+      float: right;
+      position: relative;
+      margin: 15px;
+    }
+    .color-picker-container .picker-container .slider-container .slider {
+      width: 15px;
+      border-radius: 3px;
+      height: 200px;
+      background: #000;
+    }
+    .color-picker-container .picker-container .slider-container .pointer {
+      width: 10px;
+      height: 10px;
+      border-radius: 5000px;
+      background-color: #00000040;
+      position: absolute;
+      left: -13px;
+    }
+    .color-picker-container .palletes-container {
+      float: left;
+      padding-left: 7px;
+      padding-bottom: 7px;
+      width: 275px;
+    }
+    .color-picker-container .palletes-container .palette {
+      width: 20px;
+      height: 20px;
+      float: left;
+      border-radius: 4000px;
+      margin: 5px;
+      cursor: pointer;
+    }
+    .color-picker-container .palletes-container .palette.active {
+      box-shadow: 0 0 0 2px #00000030;
+    }
+    
+    #picker {
+        position : absolute;
+        top : 0;
+        left : 0;
+        
+    }
+    
 }
